--- a/web-gui/buildyourownbotnet/templates/home.html
+++ b/web-gui/buildyourownbotnet/templates/home.html
@@ -778,7 +778,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translate(-48px, 12px);">
-									<strong>Monero Miner</strong></p>
+									<strong>Monero Miner</strong>
+								</p>
 							</div>
 
 							<!-- Persistence -->
@@ -787,7 +788,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translateY(12px);">
-									<strong>Establish Persistence</strong></p>
+									<strong>Establish Persistence</strong>
+								</p>
 							</div>
 
 							<!-- Escalate privileges -->
@@ -796,7 +798,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translate(-16px, 12px);">
-									<strong>Escalate Privileges</strong></p>
+									<strong>Escalate Privileges</strong>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -804,13 +807,25 @@
 					<!-- Column 3 (modules 4-6) -->
 					<div class="col-md-2" style="padding: 5px; padding-left: 80px; width: 250px">
 						<div class="row">
-							<!-- DDOS -->
+
+							<!-- DDOS Layer 4 -->
 							<div>
 								<img src="/assets/images/module_lineart/blue_lineart_ddos.png"
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; float: right; font-family: titillium; transform: translate(-97px, 12px);">
-									<strong>DDOS</strong></p>
+									<strong>DDOS Layer 4</strong>
+								</p>
+							</div>
+
+							<!-- DDOS Layer 7 -->
+							<div>
+								<img src="/assets/images/module_lineart/blue_lineart_ddos.png"
+									style="width: 50px; vertical-align: middle;" class="responsive" />
+								<p
+									style="color: white; font-size: 13px; float: right; font-family: titillium; transform: translate(-97px, 12px);">
+									<strong>DDOS Layer 7</strong>
+								</p>
 							</div>
 
 							<!-- Keylogger -->
@@ -819,7 +834,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translate(-70px, 12px);">
-									<strong>Keylogger</strong></p>
+									<strong>Keylogger</strong>
+								</p>
 							</div>
 
 							<!-- Port Scanner -->
@@ -828,7 +844,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translate(-50px, 12px);">
-									<strong>Port Scanner</strong></p>
+									<strong>Port Scanner</strong>
+								</p>
 							</div>
 						</div>
 					</div>
@@ -848,7 +865,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translate(-60px, 12px);">
-									<strong>Screenshot</strong></p>
+									<strong>Screenshot</strong>
+								</p>
 							</div>
 
 							<!-- Webcam -->
@@ -857,7 +875,8 @@
 									style="width: 50px; vertical-align: middle;" class="responsive" />
 								<p
 									style="color: white; font-size: 13px; font-family: titillium; float: right; transform: translate(-76px, 12px);">
-									<strong>Webcam</strong></p>
+									<strong>Webcam</strong>
+								</p>
 							</div>
 						</div>
 					</div>
